Attempt to fix right overflow

--- a/src/pages/masonry.css
+++ b/src/pages/masonry.css
@@ -1,7 +1,7 @@
 .my-masonry-grid {
   display: flex;
   width: 95vw;
-  margin-left: -32px; /* gutter size offset */
+  margin-left: -48px; /* gutter size offset */
 }
 .my-masonry-grid_column {
   padding-left: 16px; /* gutter size */
